@@ -50,6 +50,12 @@ object ScaldingBuild extends Build {
 
     fork in Test := true,
 
+    javaOptions in Test ++= Seq("-Xmx2048m", "-XX:ReservedCodeCacheSize=384m", "-XX:MaxPermSize=384m"),
+
+    concurrentRestrictions in Global := Seq(
+      Tags.limitAll(1)
+    ),
+
     parallelExecution in Test := false,
 
     scalacOptions ++= Seq("-unchecked", "-deprecation"),
